samples/_failures_safe/1761654846_29f8a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4df70454.c: In function ‘main’:
./samples/SAFE/__tmp_4df70454.c:163:9: error: expected declaration or statement at end of input
  163 |         }
      |         ^
./samples/SAFE/__tmp_4df70454.c:163:9: error: expected declaration or statement at end of input
